@@ -10,7 +10,10 @@ import nextstep.station.repository.StationRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Transactional(readOnly = true)
 @Service
@@ -31,10 +34,20 @@ public class PathQueryService {
     }
 
     private void assertStationExist(final Long source, final Long target) {
-        List<Station> stations = stationRepository.findByIdIn(List.of(source, target));
-        if (stations.size() != 2) {
-            throw new NonExistentStationException(ErrorMessage.NON_EXISTENT_STATION);
+        List<Long> sourceTarget = new ArrayList<>(Arrays.asList(source, target));
+        List<Station> stations = stationRepository.findByIdIn(sourceTarget);
+        if (stations.size() == sourceTarget.size()) {
+            return;
         }
+        List<Long> stationIds = stations.stream()
+                .map(Station::getId)
+                .collect(Collectors.toList());
+        //source, target과 db에서 조회한 데이터 비교해서 일치하지 않으면 에러
+        sourceTarget.removeAll(stationIds);
+        stationIds.forEach(id -> {
+                    throw new NonExistentStationException(ErrorMessage.NON_EXISTENT_STATION, id);
+                }
+        );
     }
 
 }
